AllergyIntolerance Severity Fhir Code Support

--- a/src/main/resources/hl7/codesystem/v2ToFhirMapping.yml
+++ b/src/main/resources/hl7/codesystem/v2ToFhirMapping.yml
@@ -586,3 +586,7 @@ Appointmentstatus:
   DELETED: entered-in-error
   OVERBOOK: booked
   NOSHOW: noshow
+AllergyIntoleranceSeverity:
+  MI: mild
+  MO: moderate
+  SV: severe
